--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "cllk": "^1.8.2",
-    "next": "13.4.19",
+    "cllk": "^2.0.1",
+    "next": "^13.4.7",
     "next-pwa": "^5.5.4",
     "postcss": "8.4.29",
     "preact": "^10.17.1",
