--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^13.4.19",
+    "@next/bundle-analyzer": "13.4.19",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "cllk": "^2.0.1",
-    "next": "^13.4.7",
-    "next-pwa": "^5.5.4",
+    "cllk": "2.0.1",
+    "next": "^13.4.15",
+    "next-pwa": "5.5.4",
     "postcss": "8.4.29",
-    "preact": "^10.17.1",
+    "preact": "10.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
