--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "cllk": "^2.1.1",
     "next": "^13.4.15",
     "next-pwa": "5.5.4",
     "postcss": "8.4.29",
     "preact": "10.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
     "typed.js": "^2.0.16",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
