--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preact": "10.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "typed.js": "^2.0.16",
     "typescript": "5.2.2"
   },
