--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "postcss": "8.4.29",
     "preact": "10.17.1",
     "react": "18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "react-intersection-observer": "^9.5.3",
+    "swiper": "^11.0.5",
     "typed.js": "^2.0.16",
     "typescript": "5.2.2"
   },
