--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "next": "^13.4.15",
     "next-pwa": "5.5.4",
     "postcss": "8.4.29",
-    "preact": "10.17.1",
+    "preact": "^10.19.2",
     "react": "18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "18.2.0",
