--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.15",
     "next": "^13.4.15",
     "next-pwa": "5.5.4",
+    "parse": "^5.3.0",
     "postcss": "8.4.29",
     "preact": "^10.19.2",
     "react": "18.2.0",
@@ -28,6 +29,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/parse": "^3.0.9",
     "tailwindcss": "^3.3.3"
   }
 }
