--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@llampukaq/icons": "^0.1.539",
     "@next/bundle-analyzer": "13.4.19",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
@@ -23,6 +24,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.5.3",
     "swiper": "^11.0.5",
     "typed.js": "^2.0.16",
