--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.6",
+    "@heroui/system": "^2.4.13",
+    "@heroui/theme": "^2.4.13",
     "@llampukaq/icons": "^0.1.539",
     "@next/bundle-analyzer": "13.4.19",
     "@types/node": "20.6.0",
@@ -26,6 +29,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.5.3",
+    "react-zoom-pan-pinch": "^3.7.0",
     "swiper": "^11.0.5",
     "typed.js": "^2.0.16",
     "typescript": "5.2.2"
