--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "next": "^13.4.15",
+    "next": "^15.3.2",
+    "next-intl": "^4.1.0",
     "next-pwa": "5.5.4",
     "parse": "^5.3.0",
     "postcss": "8.4.29",
