--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "@heroui/react": "^2.7.6",
     "@heroui/system": "^2.4.13",
     "@heroui/theme": "^2.4.13",
     "@llampukaq/icons": "^0.1.539",
     "@next/bundle-analyzer": "13.4.19",
+    "@opennextjs/cloudflare": "^1.0.2",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -37,6 +42,7 @@
   },
   "devDependencies": {
     "@types/parse": "^3.0.9",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "wrangler": "^4.15.2"
   }
 }
