--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.15",
     "next": "^15.3.2",
     "next-intl": "^4.1.0",
