--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.2.7",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.15",
+    "lucide-react": "^0.544.0",
     "next": "^15.3.2",
     "next-intl": "^4.1.0",
     "next-pwa": "5.5.4",
