--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "luis",
-  "version": "0.1.0",
+  "name": "jorge-ortega-portfolio",
+  "version": "2.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,8 +20,9 @@
     "@types/react-dom": "18.2.7",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.15",
+    "framer-motion": "^12.27.5",
     "lucide-react": "^0.544.0",
-    "next": "^16.0.6",
+    "next": "^15.5.9",
     "next-intl": "^4.1.0",
     "next-pwa": "5.5.4",
     "parse": "^5.3.0",
